--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,12 @@
   font-family: 'Eczar', serif;
 }
 
-/* .splash{
+.splash{
   background: linear-gradient(90deg, rgba(57,22,95,1) 0%, rgba(57,22,95,1) 27%, rgba(89,45,107,1) 72%, rgba(123,64,120,1) 100%);
     background-image: linear-gradient(90deg, rgb(57, 22, 95) 0%, rgb(57, 22, 95) 27%, rgb(89, 45, 107) 72%, rgb(123, 64, 120) 100%)
-} */
+}
+.bgclub{
+background: url(http://pavbca.com/walldb/original/5/1/7/484530.jpg)center center/cover no-repeat;
+  /* filter: blur(2px);
+  z-index: -1; */
+}
