--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -12,7 +12,7 @@
     height: 3px;
     bottom: 0;
     left: 0;
-    background-color: rgb(158, 10, 10);
+    background-color: white;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
   }
