--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,22 @@ background: url(http://pavbca.com/walldb/original/5/1/7/484530.jpg)center center
   float:none; 
   transition: 0s !important;
 }
+
+.css-eoZyEX{
+  display: none;
+}
+.css-fgANvS{
+  padding-top: 0px !important;
+  padding-bottom: 5px !important;
+}
+.css-fgANvS{
+  margin-bottom: 10px !important;
+}
+/* .css-iHXJtn{
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+} */
+
+.carousel{
+  height: 250px;
+}
