final login modal

--- a/src/App.css
+++ b/src/App.css
@@ -40,21 +40,21 @@ background: url(http://pavbca.com/walldb/original/5/1/7/484530.jpg)center center
 .carousel{
   height: 250px;
 }
-.input {
-  color: white;
-  border: 2px solid #e8e8e8;
-  padding: 15px;
-  border-radius: 10px;
-  background-color: #212121;
-  font-size: small;
-  font-weight: bold;
-  text-align: center;
- }
- 
- .input:focus {
-  outline-color: white;
-  background-color: #212121;
-  color: #e8e8e8;
-  box-shadow: 5px 5px #888888;
- }
- 
+
+hr{
+  padding: 0;
+  border: none;
+  border-top:  1px dashed #CCC;
+  color: #333;
+  text-align: center;    
+  font-size:12px;
+}
+hr::after{
+  content:"or try this";
+  display: inline-block;
+  position: relative; 
+  top: -0.7em;  
+  font-size: 1.5em;
+  padding: 0 0.25em;
+  background: white;
+}
