--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=Eczar&display=swap'); */
 
 *{
+  font-family: 'Fredoka One', cursive;
   /* font-family: 'Quicksand', sans-serif; */
-  font-family: 'Manrope', sans-serif;
+  /* font-family: 'Manrope', sans-serif; */
   /* font-family: 'Eczar', serif; */
 }
 
@@ -41,15 +43,15 @@ background: url(http://pavbca.com/walldb/original/5/1/7/484530.jpg)center center
   height: 250px;
 }
 
-hr{
+.hrsp{
   padding: 0;
   border: none;
-  border-top:  1px dashed #CCC;
+  border-top:  1px  #CCC;
   color: #333;
   text-align: center;    
   font-size:12px;
 }
-hr::after{
+.hrsp::after{
   content:"or try this";
   display: inline-block;
   position: relative; 
