--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,12 @@
   /* font-family: 'Manrope', sans-serif; */
   /* font-family: 'Eczar', serif; */
 }
-
+input::-ms-reveal,
+input::-ms-clear {
+        display: none;
+      }
 .splash{
-  background: linear-gradient(90deg, rgba(57,22,95,1) 0%, rgba(57,22,95,1) 27%, rgba(89,45,107,1) 72%, rgba(123,64,120,1) 100%);
+  background: linear-gradient(90deg, rgb(41, 41, 41) 0%, rgba(57,22,95,1) 27%, rgba(89,45,107,1) 72%, rgba(123,64,120,1) 100%);
     background-image: linear-gradient(90deg, rgb(57, 22, 95) 0%, rgb(57, 22, 95) 27%, rgb(89, 45, 107) 72%, rgb(123, 64, 120) 100%)
 }
 .bgclub{
