--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Carter+One&display=swap');
+
 
 *{
-  font-family: 'Fredoka One', cursive;
+  font-family: 'Carter One', cursive;
+  /* font-family: 'Fredoka One', cursive; */
   /* font-family: 'Quicksand', sans-serif; */
   /* font-family: 'Manrope', sans-serif; */
   /* font-family: 'Eczar', serif; */
@@ -60,6 +63,11 @@ background: url(http://pavbca.com/walldb/original/5/1/7/484530.jpg)center center
   font-size: 1.5em;
   padding: 0 0.25em;
   background: white;
+}
+.svgbg{
+  background: linear-gradient(90deg, rgba(0, 35, 77, 0.63) 11.46%, rgba(0, 35, 77, 0.607029) 34.12%, rgba(0, 35, 77, 0.607029) 34.12%, rgba(0, 35, 77, 0.607029) 77.37%, rgba(0, 35, 77, 0.63) 77.37%), url('../public/images/rose-petals.png') center center/cover;
+  background-position: bottom;
+  /* filter: brightness(1.3) */
 }
 
 
