--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ background: url(http://pavbca.com/walldb/original/5/1/7/484530.jpg)center center
 .svgbg{
   background: linear-gradient(90deg, rgba(0, 35, 77, 0.63) 11.46%, rgba(0, 35, 77, 0.607029) 34.12%, rgba(0, 35, 77, 0.607029) 34.12%, rgba(0, 35, 77, 0.607029) 77.37%, rgba(0, 35, 77, 0.63) 77.37%), url('../public/images/rose-petals.png') center center/cover;
   background-position: bottom;
-  /* filter: brightness(1.3) */
+  filter: brightness(1.3)
 }
 
 
