--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Carter+One&display=swap');
 
-
 *{
   font-family: 'Carter One', cursive;
   /* font-family: 'Fredoka One', cursive; */
@@ -10,19 +9,17 @@
   /* font-family: 'Manrope', sans-serif; */
   /* font-family: 'Eczar', serif; */
 }
+
 input::-ms-reveal,
 input::-ms-clear {
         display: none;
       }
-.splash{
-  background: linear-gradient(90deg, rgb(41, 41, 41) 0%, rgba(57,22,95,1) 27%, rgba(89,45,107,1) 72%, rgba(123,64,120,1) 100%);
-    background-image: linear-gradient(90deg, rgb(57, 22, 95) 0%, rgb(57, 22, 95) 27%, rgb(89, 45, 107) 72%, rgb(123, 64, 120) 100%)
-}
+/* 
 .bgclub{
 background: url(http://pavbca.com/walldb/original/5/1/7/484530.jpg)center center/cover no-repeat;
-  /* filter: blur(2px);
-  z-index: -1; */
-}
+  filter: blur(2px);
+  z-index: -1;
+} */
 .carousel-item{
   float:none; 
   transition: 0s !important;
@@ -65,12 +62,33 @@ background: url(http://pavbca.com/walldb/original/5/1/7/484530.jpg)center center
   background: white;
 }
 .svgbg{
-  background: linear-gradient(90deg, rgba(0, 35, 77, 0.63) 11.46%, rgba(0, 35, 77, 0.607029) 34.12%, rgba(0, 35, 77, 0.607029) 34.12%, rgba(0, 35, 77, 0.607029) 77.37%, rgba(0, 35, 77, 0.63) 77.37%), url('../public/images/rose-petals.png') center center/cover;
+  background-color: #01374e;
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg');
+  background-position: center;
+  background-repeat: repeat;
+  background-size: 190%;
+  filter: brightness(1.3) ;
+  /* background: linear-gradient(90deg, rgba(0, 35, 77, 0.63) 11.46%, rgba(0, 35, 77, 0.607029) 34.12%, rgba(0, 35, 77, 0.607029) 34.12%, rgba(0, 35, 77, 0.607029) 77.37%, rgba(0, 35, 77, 0.63) 77.37%), url('../public/images/rose-petals.png') center center/cover;
   background-position: bottom;
-  filter: brightness(1.3)
+  filter: brightness(1.3) */
 }
 
+.dot {
+  height: 25px;
+  width: 25px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+.down-arrow {
+  margin-left: 1px;
+  width: 0; 
+  height: 0; 
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid black;
 
+  }
 /* @media screen and (min-width: 991px) {
   .posab{
     position: absolute !important;
@@ -96,3 +114,10 @@ background: url(http://pavbca.com/walldb/original/5/1/7/484530.jpg)center center
   font-family: 'Manrope', sans-serif;
   font-family: 'Eczar', serif; */
 
+.dropdown-menu{
+  /* position: absolute; */
+  right: 0% !important;
+  inset: 0px auto auto 0px;
+  /* margin: 0px; */
+  transform: translate3d(0px, 39.3333px, 0px);
+}
