--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap');
-
-footer{
-    font-family: 'Cabin', sans-serif;
+li{
+    color: blueviolet;
 }
