--- a/src/App.css
+++ b/src/App.css
@@ -58,8 +58,9 @@ input::-ms-clear {
 }
 .svgbg{
   background: blueviolet;
-  filter: brightness(0.5);
-  /* background-image: url('../public/images/figmaimg.jpeg'); */
+  filter: brightness(0.6);
+  /* background-image: url('../public/images/figmaimg.jpeg');
+  filter: blur(4px) brightness(0.3); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
