--- a/src/App.css
+++ b/src/App.css
@@ -103,3 +103,11 @@ input::-ms-clear {
   background-repeat: no-repeat;
   /* filter: brightness(0.3) */
 }
+input[type=number]{
+  -moz-appearance: textfield;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
