--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 *{
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  /* font-family: 'DM Sans', sans-serif; */
   font-weight: 700;
 }
 
@@ -213,3 +215,47 @@ option {
 transform: translateZ(0);
 
 }
+
+.carousel-item-container {
+  position: relative;
+  width: 100%;
+  padding-top: 80%;
+}
+
+.carousel-item-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+
+/* Media Screens for Mianpage ticketing component  */
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  
+  section.ticketingSection div div h1{
+   font-size: 35px !important;
+  }
+  section.ticketingSection div div b{
+   font-size: 0.8rem !important;
+  }
+
+}
+
+@media only screen and (max-width: 464px) {
+  section.ticketingSection div div h1{
+    font-size: 40px !important;
+   }
+   section.ticketingSection div div b{
+    font-size: 0.8rem !important;
+   }
+   .MainHeader{
+    height: 570px !important;
+   }
+}
+
