completing some agenda in final day list

--- a/src/App.css
+++ b/src/App.css
@@ -262,3 +262,7 @@ transform: translateZ(0);
    }
 }
 
+/* .modal-content{
+  background: transparent !important;
+  border: none !important;
+} */
