--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 *{
-  /* font-family: 'Poppins', sans-serif; */
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  /* font-family: 'DM Sans', sans-serif; */
   font-weight: 700;
 }
 
