little changes to make it better

--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -73,8 +73,8 @@
   margin-bottom: 15px;
 }
 
-.sign-up-header h2 {
-  color: #fff;
+.sign-up-header h3 {
+  color: #ffffff;
   text-transform: uppercase;
   font-weight: 800;
 }
