Added changes to signup

--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -6,6 +6,7 @@
   display: flex;
   gap: 90px;
   min-height: 100vh;
+  position: relative;
 }
 
 .sign-up-left {
@@ -81,4 +82,54 @@
   color: #fff;
   text-transform: uppercase;
   font-weight: 800;
+}
+
+@media (max-width: 992px) {
+  .sign-up-main {
+    justify-content: center;
+  }
+
+  .sign-up-left {
+    display: none;
+  }
+
+  .sign-up-right {
+    padding: 40px 20px 30px;
+  }
+
+  .sign-up-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+
+  .sign-up-header img {
+    width: 80%;
+    margin-bottom: 40px;
+  }
+
+  .sign-up-header h1 {
+    text-align: center;
+    font-size: 28px;
+  }
+
+  .sign-up-header p {
+    font-size: 16px;
+  }
+}
+
+.signup-close {
+  position: absolute;
+  height: 36px;
+  width: 36px;
+  top: 4%;
+  right: 3%;
+  border: solid white 1px;
+  border-radius: 50%;
+  background-color: transparent;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
