login page responsivity achieved - lil bugs to be fixed

--- a/src/App.css
+++ b/src/App.css
@@ -301,3 +301,8 @@ select.QuantityFields option {
   margin-left: 10px;
   margin-right: 10px;
 }
+
+
+.form-control:focus{
+  box-shadow: none !important
+}
