--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,3 +1,114 @@
-li{
-    color: blueviolet;
+li {
+  color: blueviolet;
+}
+
+.footer {
+  font-size: 14px;
+  background: #f7f7f7;
+  bottom: 0;
+  padding: 100px 60px;
+}
+
+.footer-container {
+  display: flex;
+  gap: 60px;
+}
+
+.line-left {
+  border-left: 2px solid black;
+}
+
+.footer-left {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  align-items: start;
+  max-width: 600px;
+}
+
+.footer-left-content {
+  padding: 0 40px;
+  font-size: 15px;
+  line-height: 27.01px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.footer-socials {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  gap: 30px;
+}
+
+.footer-socials li {
+  list-style: none;
+}
+
+.footer-right {
+  display: flex;
+  /* gap: 70px; */
+  flex-grow: 1;
+  flex-shrink: 0;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.footer-right-col {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.footer-right h6 {
+  padding: 0 20px;
+  border-left: 2px solid black;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.footer-right-col ul {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 0;
+}
+
+@media (max-width: 1200px) {
+  .footer-right {
+    gap: 40px;
+  }
+}
+
+@media (max-width: 964px) {
+  .footer-container {
+    flex-direction: column;
+    gap: 80px;
+  }
+}
+
+@media (max-width: 636px) {
+  .footer {
+    padding: 60px 30px;
+  }
+}
+
+@media (max-width: 576px) {
+  .footer {
+    padding: 60px 60px;
+  }
+
+  .footer-right {
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .footer-right-col {
+    gap: 30px;
+  }
+
+  .footer-right-col ul {
+    gap: 15px;
+  }
 }
