--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,3 +1,34 @@
-a{
+a {
     color: black;
 }
+
+@media (min-width: 993px) {
+    .logo-modulator {
+        position: absolute !important;
+        top: 50% !important;
+        left: 50% !important;
+        transform: translate(-50%, -50%) !important;
+    }
+}
+
+@media (max-width: 992px) {
+    .logo-modulator {
+        position: relative !important;
+    }
+}
+
+/* Add this to your CSS file */
+.nav-filter-backdrop::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    background-color: #ffffff1a;
+    border-radius: 15px;
+    border: 1px solid #ffffff26;
+    backdrop-filter: blur(17px);
+  }
+  
