all club page changes made in code by faezan

--- a/src/css/AllClubs.css
+++ b/src/css/AllClubs.css
@@ -3,7 +3,7 @@
 }
 
 .all-clubs-hero {
-  height: 100vh;
+  height: 500px;
   background: black;
   position: relative;
   max-height: 685px;
@@ -12,32 +12,17 @@
   margin: 10px;
 }
 
-.all-clubs-heading {
-  font-family: "Sora", sans-serif;
-  color: #fff;
-  font-size: 80px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: normal;
-  text-transform: uppercase;
-  text-align: center;
-}
-
 .all-clubs-hero-content {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.5);
   text-align: center;
-  font-family: Sora;
-  font-size: 20px;
-  font-style: normal;
+  font-size: 18px;
   font-weight: 400;
-  line-height: 35px; /* 175% */
-  max-width: 770px;
+  line-height: 30px; /* 175% */
 }
 
 .clubs-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* grid-template-rows: repeat(auto-fit, minmax(400px, 480px)); */
   grid-auto-rows: minmax(400px, 480px);
   gap: 30px;
   margin-top: 70px;
@@ -53,18 +38,18 @@
 .club-card-rating {
   position: absolute;
   top: 25px;
-  right: 25px;
+  right: 15px;
   color: white;
-  gap: 10px;
-  padding: 10px 15px;
+  gap: 5px;
+  padding: 5px 12px;
   border-radius: 100px;
   border: 1px solid var(--Stroke, #fff);
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
-  font-size: 20px;
+  font-size: 16px;
 }
 
-@media (max-width: 1140px) {
+/* @media (max-width: 1140px) {
   .all-clubs-heading {
     font-size: 30px;
   }
@@ -78,7 +63,7 @@
     margin-top: 40px;
     padding: 0 20px;
   }
-}
+} */
 
 @media (max-width: 768px) {
   .all-clubs-hero {
@@ -88,5 +73,15 @@
 
   .clubs-grid {
     grid-template-columns: repeat(1, 1fr);
+  }
+  .all-clubs-hero div h1{
+    font-size: 30px !important;
+  }
+  .all-clubs-hero div p{
+    font-size: 15px !important;
+  }
+  .all-clubs-hero-textdiv{
+    position: absolute !important;
+    top: 50% !important
   }
 }
