--- a/src/css/AllClubs.css
+++ b/src/css/AllClubs.css
@@ -71,17 +71,21 @@
     border-radius: 0 0 20px 20px;
   }
 
+  .all-clubs-pattern {
+    display: none;
+  }
+
   .clubs-grid {
     grid-template-columns: repeat(1, 1fr);
   }
-  .all-clubs-hero div h1{
+  .all-clubs-hero div h1 {
     font-size: 30px !important;
   }
-  .all-clubs-hero div p{
+  .all-clubs-hero div p {
     font-size: 15px !important;
   }
-  .all-clubs-hero-textdiv{
+  .all-clubs-hero-textdiv {
     position: absolute !important;
-    top: 50% !important
+    top: 50% !important;
   }
 }
