--- a/src/css/SingularEvent.css
+++ b/src/css/SingularEvent.css
@@ -14,3 +14,35 @@
   *{
   scroll-behavior: smooth
   }
+  @media screen and (max-width: 900px) and (min-width: 481px) {
+    .ContactCard {
+      height: 500px !important;
+    }
+  }
+  @media screen and (max-width: 480px) {
+    .eventContainer{
+      position: static !important;
+    }
+    .globalEventContainer{
+      height: 100% !important;
+      border-radius: 0px !important;
+    }
+    .col-lg-7 h1{
+      font-size: 30px !important;
+    }
+    .bookingSpotButton{
+      position: fixed;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10;
+      background: rgba(255, 255, 255, 0.1) !important;
+      border-radius: 0px !important;
+      border-top-right-radius: 20px !important;
+      border-top-left-radius: 20px !important;
+    }
+    div.bookingSpotButton div p:first-child {
+      font-size: 14px !important;
+    }
+  }
+  
