--- a/src/css/SingularEvent.css
+++ b/src/css/SingularEvent.css
@@ -27,22 +27,47 @@
       height: 100% !important;
       border-radius: 0px !important;
     }
-    .col-lg-7 h1{
-      font-size: 30px !important;
-    }
-    .bookingSpotButton{
+    .bookingSpotButton {
       position: fixed;
       bottom: 0;
       left: 50%;
       transform: translateX(-50%);
       z-index: 10;
-      background: rgba(255, 255, 255, 0.1) !important;
+      background: #0f0f0f !important;
+      border-radius: 0px !important;
+      border-top-right-radius: 20px !important;
+      border-top-left-radius: 20px !important;
+      opacity: 1;
+      transition: bottom 0.3s ease, opacity 0.3s ease;  
+    }
+    .bookingSpotButton.hidden {
+      opacity: 0;
+      pointer-events: none; /* Disable clicks when hidden */
+    }
+    .bookingSpotButton::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: -1;
+      background-color: #ffffff1a;
+      border: 1px solid #ffffff26;
       border-radius: 0px !important;
       border-top-right-radius: 20px !important;
       border-top-left-radius: 20px !important;
     }
+    .col-lg-7 h1{
+      font-size: 30px !important;
+    }
     div.bookingSpotButton div p:first-child {
       font-size: 14px !important;
     }
+    .btn{
+      padding:  13px 20px !important;
+      font-size: 14px !important;
+    }
   }
+  
   
