--- a/src/css/Checkout.css
+++ b/src/css/Checkout.css
@@ -6,4 +6,19 @@
         font-size: 14px !important;
     }
   }
+
+@media (max-width: 767px){
+    .eventPoster{
+        height: 100% !important;
+    }
+    .eventHeading{
+        font-size: 1rem !important;
+    }
+    .eventDT{
+        font-size: 12px !important
+    }
+    .eventV{
+        font-size: 12px !important
+    }
+}
   
