--- a/src/css/Checkout.css
+++ b/src/css/Checkout.css
@@ -8,6 +8,9 @@
   }
 
 @media (max-width: 767px){
+    .payment-price{
+        font-size: 12px !important;
+    }
     .eventPoster{
         height: 100% !important;
     }
@@ -25,6 +28,13 @@
     }
     .progressbarcontainer{
         gap: 20px !important;
+    }
+    .total-amount {
+        font-size: 16px !important;
+    }
+    .Stage1Button{
+        padding: "13px 15px" !important;
+        font-size: "12px" !important
     }
 }
   
