--- a/src/css/Newsletter.css
+++ b/src/css/Newsletter.css
@@ -10,7 +10,7 @@
     .NewsletterSection{
         background: white !important;
         height: 650px !important;
-        
+
     }
     .btn-events{
         background: black !important;
@@ -18,6 +18,7 @@
     }
     .NewletterInput{
         border: 1px solid black !important;
+        color: black !important;
     }
 }
 @media (min-width: 768px) and (max-width: 1024px){
@@ -35,6 +36,7 @@
     }
     .NewletterInput{
         border: 1px solid white !important;
+        color: white !important;
     }
 }
   
@@ -53,5 +55,6 @@
     }
     .NewletterInput{
         border: 1px solid white !important;
+        color: white !important;
     }
 }
