--- a/src/css/ClubsRow.css
+++ b/src/css/ClubsRow.css
@@ -13,3 +13,30 @@ flex: 0 0 25%;
 } 
 }
 
+.HeaderGlobal{
+    color: #fff;
+    font-family: "Sora", sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+@media (max-width: 767px){
+    .HeaderGlobal{
+        color: white !important;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1025px){
+    .HeaderGlobal{
+        font-size: 40px;
+    }
+}
+  
+@media (min-width: 1025px){
+    .HeaderGlobal{
+        font-size: 60px;
+    }   
+}
+
