--- a/src/css/ClubsRow.css
+++ b/src/css/ClubsRow.css
@@ -22,25 +22,25 @@ flex: 0 0 25%;
     text-transform: uppercase;
 }
 
-.plannerSectionMainImg{
-    height: 100vh !important;
-}
-
 @media (max-width: 767px){
     .HeaderGlobal{
         color: white !important;
     }
     .plannerSectionMainImg{
-        
+        height: 400px !important;
     }
 }
 
 @media (min-width: 768px) and (max-width: 1025px){
     .HeaderGlobal{
+        /* color: black !important; */
         font-size: 40px;
     }
     .plannerSectionMainImg{
-        height: 50vh !important;
+        height: 450px !important;
+    }
+    .plannerSectionSubImg{
+        /* height: 225px !important */
     }
 }
   
@@ -49,7 +49,9 @@ flex: 0 0 25%;
         font-size: 60px;
     }
     .plannerSectionMainImg{
-        height: 100vh !important;
+        height: 650px !important;
+    }
+    .plannerSectionSubImg{
+        /* height: 370px !important */
     }
 }
-
